# twitter-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  create_bucket.py  docker-compose.yml  package.json
backend/: .dockerignore  .env.example  .flake8  .gitignore  DOCKER_FIX.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  SETUP.md  apify_output.json  build-docker.sh  check_db.py  docker-compose.yml  init_database.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_migration.py  setup.py  test_apify.py  test_apify2.py  verify_assistants_migration.py
backend/migrations/: 000_full_migration_assistants_communication_styles.sql  add_persona_to_campaigns.sql  create_assistants_table.sql  create_personas_table.sql  create_tweet_analysis_table.sql  create_tweet_comments_table.sql  insert_cadu_persona.sql  rename_personas_to_communication_styles.sql  rollback_assistants_communication_styles_refactor.sql  update_campaigns_communication_style_references.sql  update_default_persona_to_portuguese.sql  verify_campaigns_communication_style_migration.sql  verify_communication_styles_migration.sql  verify_rollback_assistants_communication_styles.sql
backend/src/: __init__.py  main.py
backend/src/core/: config.py  database.py  logging_config.py
backend/src/models/: __init__.py  analysis.py  assistant.py  campaign.py  communication_style.py  configuration.py  tweet_analysis.py  tweet_comment.py
backend/src/repositories/: __init__.py  (+6 more)
backend/supabase/: setup_storage.py
backend/tests/: __init__.py  conftest.py  test_analysis_engine.py  test_campaign_parser.py  test_campaign_validation_properties.py  test_campaign_validator.py  test_configuration_manager.py  test_configuration_properties.py  test_document_generator.py  test_email_service.py  test_encryptor.py  test_main.py  test_middleware.py  test_parsing_properties.py  test_query_construction_properties.py  test_queue_status_properties.py  test_scraping_engine.py  test_storage_service.py  test_transformation_properties.py
(+167 files in other folders)
